<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity"
    tools:openDrawer="start">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/bg_foods"
        android:tint="@color/dark"
        android:tintMode="screen"
        android:scaleType="centerCrop"/>

    <!--ImageView
        android:id="@+id/imageView3"
        android:layout_width="220dp"
        android:layout_height="198dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@mipmap/ic_launcher_foreground" /-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FoodWize"
                android:layout_gravity="bottom"
                android:textSize="26sp"
                android:gravity="center"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save your Share"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:layout_marginBottom="27dp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/login_tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="center"
                app:tabIndicatorColor="@color/white"
                app:tabSelectedTextColor="@color/white"
                app:tabIndicatorHeight="5dp"
                app:tabTextColor="@android:color/darker_gray">
                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_english" />
                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_english" />
            </android.support.design.widget.TabLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/sign_in_cardView"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <EditText
                            android:id="@+id/phone_number_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <EditText
                            android:id="@+id/password_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeActionId="6"
                            android:imeActionLabel="密码太短"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/confirm_button"
                        android:layout_gravity="center"
                        android:layout_margin="40dp"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/confirm"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/sign_up_cardView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <EditText
                            android:id="@+id/phone_number_signUp_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <EditText
                            android:id="@+id/password_signUp_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeActionId="6"
                            android:imeActionLabel="密码太短"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="fill"
                        android:weightSum="3"
                        android:orientation="horizontal">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="2"
                            android:layout_marginEnd="10dp">
                            <EditText
                                android:id="@+id/verification_signUp_editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/verification_code"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>
                        <Button
                            android:id="@+id/get_verification_button"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/get_verification_code"
                            android:layout_marginEnd="5dp"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/confirm_signUp_button"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/confirm"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/forget_password"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/copyright"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>